--- a/css/btn.css
+++ b/css/btn.css
@@ -2,7 +2,7 @@
 /* Buttons at the center */
 .wrap {
   position: absolute;
-  top: 40%;
+  top: 100%;
   left: 70%;
   margin-top: -259px;
   margin-left: -89px;
@@ -13,7 +13,7 @@
 a {
   padding: 30px 30px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 24px;
   display: block;
   margin: 20px auto;
 }
@@ -144,7 +144,7 @@ a {
   border: none;
   outline: none;
   color: #fefefe;
-  background-color: #9b59b6;
+  background-color: #FFCC00;
   border-radius: 3px;
 }
 .btn5:hover, .btn5:focus, .btn5:link:hover, .btn5:link:focus, .btn5:visited:hover, .btn5:visited:focus {
