--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
 header {
-  background: #fff;
+  background: #000;
 }
 
 .headline {
   position: relative;
-  height: 500px;  
+  width: 100%;
+  height: 800px;  
   color: #fff;
   text-align: center;
 	background: url("../img/thailand.jpg") no-repeat center center;
@@ -23,22 +24,26 @@ header {
 
 .inner {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   opacity: 0;
   z-index: 10;
-  color: #000;
+  color: #fff;
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
   -webkit-animation: fade-in 0.75s 0.25s ease-in forwards;
           animation: fade-in 0.75s 0.25s ease-in forwards;
+  font-family: Arvo;
+  font-weight: bold;      
 }
 .inner h1 {
-  margin: 0;
-  font-size: 4em;
-  font-style: normal;  
-  line-height: 1.2em;
-  font-family: monospace;
+color: #fff;/*文字色*/
+
+border: solid 4px #fff;/*線色*/
+padding: 0.3em;/*文字周りの余白*/
+border-radius: 0.5em;/*角丸*/
+font-size: 6vw;
+background: #000/*背景色*/
 }
 
 .inner p {
